Fixed project title when too long

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -426,7 +426,9 @@ a.active:after {
 }
 .cta {
   font-family: "Kalnia", "Georgia", serif;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
   background-color: #2C231E;
   color: #EFECE6;
   padding: 20px 25px;
@@ -844,6 +846,9 @@ input[id=burger]:checked ~ .burger__wrapper span:nth-child(3) {
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+  }
+  .herosingle__title--container {
+    max-width: 45rem;
   }
   .herosingle--bottom {
     padding-top: 8em;
