--- a/resources/scss/pages/single-projet/hero.scss
+++ b/resources/scss/pages/single-projet/hero.scss
@@ -54,6 +54,10 @@
     align-items: center;
     justify-content: space-between;
 
+    &__title--container {
+      max-width: 45rem;
+    }
+
     &--bottom {
       padding-top: 8em;
 
