--- a/resources/scss/partials/cta.scss
+++ b/resources/scss/partials/cta.scss
@@ -1,6 +1,8 @@
 .cta {
   font-family: 'Kalnia', "Georgia", serif;
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  text-align: center;
   background-color: $ctaBackgroundColor;
   color: $ctaTextColor;
   padding: 20px 25px;
